--- a/server/pom.xml
+++ b/server/pom.xml
@@ -48,9 +48,9 @@
             <version>2.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>es.indaba</groupId>
+            <groupId>org.lightcouch</groupId>
             <artifactId>lightcouch</artifactId>
-            <version>0.2.6</version>
+            <version>0.2.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven.plugins</groupId>
