--- a/client/package.json
+++ b/client/package.json
@@ -6,37 +6,26 @@
     "tsc": "tsc -w -p tsconfig.build.json"
   },
   "devDependencies": {
-    "@commitlint/cli": "^7.0.0",
-    "@commitlint/config-conventional": "^7.0.0",
-    "@open-wc/building-rollup": "^1.4.2",
-    "@open-wc/eslint-config": "^0.4.1",
-    "@open-wc/prettier-config": "^0.1.14",
-    "@open-wc/rollup-plugin-html": "^1.1.0",
-    "@open-wc/rollup-plugin-polyfills-loader": "^1.0.7",
+    "@open-wc/building-rollup": "^1.7.0",
+    "@open-wc/prettier-config": "^1.1.0",
+    "@open-wc/rollup-plugin-html": "^1.2.2",
+    "@open-wc/rollup-plugin-polyfills-loader": "^1.1.3",
     "@open-wc/testing": "^0.12.6",
     "@open-wc/testing-karma": "^2.0.11",
-    "@open-wc/testing-karma-bs": "^1.3.83",
-    "@rollup/plugin-node-resolve": "^7.1.3",
+    "@open-wc/testing-karma-bs": "^1.3.88",
+    "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-replace": "^2.3.3",
-    "es-dev-server": "^1.56.1",
-    "eslint-plugin-lit": "^1.2.0",
+    "deepmerge": "^4.2.2",
+    "es-dev-server": "^1.57.2",
     "http-server": "^0.12.3",
     "husky": "^1.0.0",
-    "lint-staged": "^8.2.1",
-    "rimraf": "^2.6.3",
-    "rollup": "^2.22.1",
+    "rimraf": "^2.7.1",
+    "rollup": "^2.26.3",
     "rollup-plugin-copy": "^3.3.0",
-    "rollup-plugin-workbox": "^5.0.1",
+    "rollup-plugin-workbox": "^5.1.0",
     "source-map-explorer": "^2.4.2",
-    "tslib": "^1.13.0",
+    "tslib": "^2.0.1",
     "typescript": "^3.9.7"
-  },
-  "lint-staged": {
-    "*.js": [
-      "eslint --fix",
-      "prettier --write",
-      "git add"
-    ]
   },
   "name": "studentsync",
   "version": "2.0.0",
