--- a/client/package.json
+++ b/client/package.json
@@ -1,59 +1,63 @@
 {
   "scripts": {
-    "start:build": "npm run build && es-dev-server --root-dir dist --app-index index.html --open --compatibility none",
+    "start:build": "npm run build && es-dev-server --base-path /sync --root-dir dist --app-index index.html --open --compatibility none",
     "build": "rimraf dist && tsc -p tsconfig.build.json && rollup -c rollup.config.js",
     "start": "es-dev-server --base-path /sync --app-index index.html --node-resolve --open --watch",
     "tsc": "tsc -w -p tsconfig.build.json"
   },
   "devDependencies": {
-    "@open-wc/building-rollup": "^1.7.0",
+    "@babel/core": "^7.14.6",
+    "@babel/eslint-parser": "^7.14.7",
+    "@babel/eslint-plugin": "^7.14.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@commitlint/cli": "^7.0.0",
+    "@commitlint/config-conventional": "^7.0.0",
+    "@open-wc/building-rollup": "^1.10.0",
+    "@open-wc/eslint-config": "^4.3.0",
     "@open-wc/prettier-config": "^1.1.0",
-    "@open-wc/rollup-plugin-html": "^1.2.2",
-    "@open-wc/rollup-plugin-polyfills-loader": "^1.1.3",
-    "@open-wc/testing": "^0.12.6",
-    "@open-wc/testing-karma": "^2.0.11",
-    "@open-wc/testing-karma-bs": "^1.3.88",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "@rollup/plugin-replace": "^2.3.3",
+    "@open-wc/rollup-plugin-html": "^1.2.5",
+    "@open-wc/rollup-plugin-polyfills-loader": "^1.1.8",
+    "@rollup/plugin-node-resolve": "^13.0.0",
+    "@rollup/plugin-replace": "^2.4.2",
     "deepmerge": "^4.2.2",
     "es-dev-server": "^1.57.2",
     "http-server": "^0.12.3",
+    "koa-proxies": "^0.12.1",
     "husky": "^1.0.0",
-    "rimraf": "^2.7.1",
-    "rollup": "^2.26.3",
-    "rollup-plugin-copy": "^3.3.0",
-    "rollup-plugin-workbox": "^5.1.0",
-    "source-map-explorer": "^2.4.2",
-    "tslib": "^2.0.1",
-    "typescript": "^3.9.7"
+    "rimraf": "^3.0.2",
+    "rollup": "^2.53.2",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-workbox": "^6.1.1",
+    "source-map-explorer": "^2.5.2",
+    "tslib": "^2.2.0",
+    "typescript": "^4.2.4"
   },
   "name": "studentsync",
   "version": "2.0.0",
   "description": "Identity Management",
   "license": "MIT",
   "dependencies": {
-    "@captaincodeman/rdx": "^1.0.0-rc.6",
-    "@captaincodeman/rdx-model": "^1.0.0-rc.5",
-    "@captaincodeman/router": "^1.0.1",
-    "@material/mwc-button": "^0.17.2",
-    "@material/mwc-dialog": "^0.17.2",
-    "@material/mwc-drawer": "^0.17.2",
-    "@material/mwc-fab": "^0.17.2",
-    "@material/mwc-formfield": "^0.17.2",
-    "@material/mwc-icon-button": "^0.17.2",
-    "@material/mwc-icon-button-toggle": "^0.17.2",
-    "@material/mwc-linear-progress": "^0.17.2",
-    "@material/mwc-slider": "^0.17.2",
-    "@material/mwc-snackbar": "^0.17.2",
-    "@material/mwc-tab": "^0.17.2",
-    "@material/mwc-tab-bar": "^0.17.2",
-    "@material/mwc-textarea": "^0.17.2",
-    "@material/mwc-textfield": "^0.17.2",
-    "@material/mwc-top-app-bar": "^0.17.2",
-    "@material/mwc-top-app-bar-fixed": "^0.17.2",
+    "@captaincodeman/rdx": "^1.0.0-rc.9",
+    "@captaincodeman/router": "^1.0.3",
+    "@material/mwc-button": "^0.22.1",
+    "@material/mwc-dialog": "^0.22.1",
+    "@material/mwc-drawer": "^0.22.1",
+    "@material/mwc-fab": "^0.22.1",
+    "@material/mwc-formfield": "^0.22.1",
+    "@material/mwc-icon-button": "^0.22.1",
+    "@material/mwc-icon-button-toggle": "^0.22.1",
+    "@material/mwc-linear-progress": "^0.22.1",
+    "@material/mwc-slider": "^0.22.1",
+    "@material/mwc-snackbar": "^0.22.1",
+    "@material/mwc-tab": "^0.22.1",
+    "@material/mwc-tab-bar": "^0.22.1",
+    "@material/mwc-textarea": "^0.22.1",
+    "@material/mwc-textfield": "^0.22.1",
+    "@material/mwc-top-app-bar": "^0.22.1",
+    "@material/mwc-top-app-bar-fixed": "^0.22.1",
     "event-target": "^1.2.3",
-    "lit-element": "^2.3.1",
-    "lit-html": "^1.2.1",
+    "lit-element": "~2.4.0",
+    "lit-html": "^1.4.1",
     "lit-virtualizer": "^0.4.2"
   }
 }
