--- a/server/pom.xml
+++ b/server/pom.xml
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>com.jcabi</groupId>
             <artifactId>jcabi-ssh</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>1.6.1</version>
         </dependency>
         <dependency>
             <groupId>org.lightcouch</groupId>
