--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "@babel/eslint-parser": "^7.14.7",
     "@babel/eslint-plugin": "^7.14.5",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-typescript": "^7.14.6",
+    "@babel/plugin-proposal-decorators": "^7.14.5",
     "@commitlint/cli": "^7.0.0",
     "@commitlint/config-conventional": "^7.0.0",
     "@open-wc/building-rollup": "^1.10.0",
