--- a/client/.babelrc
+++ b/client/.babelrc
@@ -3,6 +3,7 @@
     ["@babel/plugin-syntax-dynamic-import"],
     ["@babel/plugin-transform-typescript", {"allowDeclareFields": true}],
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
-    ["@babel/plugin-proposal-class-properties", {"loose": true}]
+    ["@babel/plugin-proposal-class-properties", {"loose": true}],
+    ["@babel/plugin-proposal-private-property-in-object", { "loose": true }]
   ]
 }
