--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,9 @@
     "@babel/core": "^7.14.6",
     "@babel/eslint-parser": "^7.14.7",
     "@babel/eslint-plugin": "^7.14.5",
+    "@babel/plugin-proposal-decorators": "^7.14.5",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-typescript": "^7.14.6",
-    "@babel/plugin-proposal-decorators": "^7.14.5",
     "@commitlint/cli": "^7.0.0",
     "@commitlint/config-conventional": "^7.0.0",
     "@open-wc/building-rollup": "^1.10.0",
@@ -24,8 +24,8 @@
     "deepmerge": "^4.2.2",
     "es-dev-server": "^1.57.2",
     "http-server": "^0.12.3",
-    "koa-proxies": "^0.12.1",
     "husky": "^1.0.0",
+    "koa-proxies": "^0.12.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.53.2",
     "rollup-plugin-copy": "^3.4.0",
@@ -58,6 +58,7 @@
     "@material/mwc-top-app-bar": "^0.22.1",
     "@material/mwc-top-app-bar-fixed": "^0.22.1",
     "event-target": "^1.2.3",
+    "kmap-term-tree": "^0.9.8",
     "lit-element": "~2.4.0",
     "lit-html": "^1.4.1",
     "lit-virtualizer": "^0.4.2"
