--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,7 @@
     "@rollup/plugin-replace": "^2.4.2",
     "deepmerge": "^4.2.2",
     "es-dev-server": "^2.1.0",
-    "http-server": "^0.13.0",
+    "http-server": "^14.0.0",
     "husky": "^1.0.0",
     "koa-proxies": "^0.12.1",
     "rimraf": "^3.0.2",
@@ -32,7 +32,7 @@
     "rollup-plugin-workbox": "^6.2.0",
     "source-map-explorer": "^2.5.2",
     "tslib": "^2.2.0",
-    "typescript": "^4.2.4"
+    "typescript": "~4.3.5"
   },
   "name": "studentsync",
   "version": "2.0.0",
@@ -41,25 +41,23 @@
   "dependencies": {
     "@captaincodeman/rdx": "^1.0.0-rc.9",
     "@captaincodeman/router": "^1.0.3",
-    "@material/mwc-button": "^0.22.1",
-    "@material/mwc-dialog": "^0.22.1",
-    "@material/mwc-drawer": "^0.22.1",
-    "@material/mwc-fab": "^0.22.1",
-    "@material/mwc-formfield": "^0.22.1",
-    "@material/mwc-icon-button": "^0.22.1",
-    "@material/mwc-icon-button-toggle": "^0.22.1",
-    "@material/mwc-linear-progress": "^0.22.1",
-    "@material/mwc-slider": "^0.22.1",
-    "@material/mwc-snackbar": "^0.22.1",
-    "@material/mwc-tab": "^0.22.1",
-    "@material/mwc-tab-bar": "^0.22.1",
-    "@material/mwc-textarea": "^0.22.1",
-    "@material/mwc-textfield": "^0.22.1",
-    "@material/mwc-top-app-bar": "^0.22.1",
-    "@material/mwc-top-app-bar-fixed": "^0.22.1",
+    "@material/mwc-button": "^0.25.3",
+    "@material/mwc-dialog": "^0.25.3",
+    "@material/mwc-drawer": "^0.25.3",
+    "@material/mwc-fab": "^0.25.3",
+    "@material/mwc-formfield": "^0.25.3",
+    "@material/mwc-icon-button": "^0.25.3",
+    "@material/mwc-icon-button-toggle": "^0.25.3",
+    "@material/mwc-linear-progress": "^0.25.3",
+    "@material/mwc-slider": "^0.25.3",
+    "@material/mwc-snackbar": "^0.25.3",
+    "@material/mwc-tab": "^0.25.3",
+    "@material/mwc-tab-bar": "^0.25.3",
+    "@material/mwc-textarea": "^0.25.3",
+    "@material/mwc-textfield": "^0.25.3",
+    "@material/mwc-top-app-bar": "^0.25.3",
+    "@material/mwc-top-app-bar-fixed": "^0.25.3",
     "event-target": "^1.2.3",
-    "lit-element": "~2.4.0",
-    "lit-html": "^1.4.1",
-    "lit-virtualizer": "^0.4.2"
+    "lit": "2.1.1"
   }
 }
