--- a/client/package.json
+++ b/client/package.json
@@ -6,34 +6,38 @@
     "tsc": "tsc -w -p tsconfig.build.json"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/eslint-parser": "^7.14.7",
-    "@babel/eslint-plugin": "^7.14.5",
+    "@babel/core": "^7.18.9",
+    "@babel/eslint-parser": "^7.18.9",
+    "@babel/eslint-plugin": "^7.17.7",
     "@babel/plugin-proposal-decorators": "^7.14.5",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-typescript": "^7.14.6",
     "@commitlint/cli": "^7.0.0",
-    "@commitlint/config-conventional": "^7.0.0",
-    "@open-wc/building-rollup": "^1.10.0",
+    "@commitlint/config-conventional": "^17.0.3",
+    "@open-wc/building-rollup": "^2.0.1",
     "@open-wc/eslint-config": "^4.3.0",
     "@open-wc/prettier-config": "^1.1.0",
     "@open-wc/rollup-plugin-html": "^1.2.5",
     "@open-wc/rollup-plugin-polyfills-loader": "^1.1.8",
-    "@rollup/plugin-node-resolve": "^13.0.0",
-    "@rollup/plugin-replace": "^2.4.2",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-replace": "^3.1.0",
     "deepmerge": "^4.2.2",
     "es-dev-server": "^2.1.0",
     "http-server": "^14.0.0",
     "husky": "^1.0.0",
-    "koa-proxies": "^0.12.1",
+    "koa-proxies": "^0.12.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.62.0",
+    "rollup": "^2.77.0",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-workbox": "^6.2.0",
     "source-map-explorer": "^2.5.2",
-    "tslib": "^2.2.0",
-    "typescript": "~4.3.5"
+    "tslib": "^2.4.0",
+    "typescript": "~4.7.4"
   },
+  "browserslist": [
+    "last 1 version",
+    "> 5%"
+  ],
   "name": "studentsync",
   "version": "2.0.0",
   "description": "Identity Management",
@@ -41,23 +45,23 @@
   "dependencies": {
     "@captaincodeman/rdx": "^1.0.0-rc.9",
     "@captaincodeman/router": "^1.0.3",
-    "@material/mwc-button": "^0.25.3",
-    "@material/mwc-dialog": "^0.25.3",
-    "@material/mwc-drawer": "^0.25.3",
-    "@material/mwc-fab": "^0.25.3",
-    "@material/mwc-formfield": "^0.25.3",
-    "@material/mwc-icon-button": "^0.25.3",
-    "@material/mwc-icon-button-toggle": "^0.25.3",
-    "@material/mwc-linear-progress": "^0.25.3",
-    "@material/mwc-slider": "^0.25.3",
-    "@material/mwc-snackbar": "^0.25.3",
-    "@material/mwc-tab": "^0.25.3",
-    "@material/mwc-tab-bar": "^0.25.3",
-    "@material/mwc-textarea": "^0.25.3",
-    "@material/mwc-textfield": "^0.25.3",
-    "@material/mwc-top-app-bar": "^0.25.3",
-    "@material/mwc-top-app-bar-fixed": "^0.25.3",
+    "@material/mwc-button": "^0.26.1",
+    "@material/mwc-dialog": "^0.26.1",
+    "@material/mwc-drawer": "^0.26.1",
+    "@material/mwc-fab": "^0.26.1",
+    "@material/mwc-formfield": "^0.26.1",
+    "@material/mwc-icon-button": "^0.26.1",
+    "@material/mwc-icon-button-toggle": "^0.26.1",
+    "@material/mwc-linear-progress": "^0.26.1",
+    "@material/mwc-slider": "^0.26.1",
+    "@material/mwc-snackbar": "^0.26.1",
+    "@material/mwc-tab": "^0.26.1",
+    "@material/mwc-tab-bar": "^0.26.1",
+    "@material/mwc-textarea": "^0.26.1",
+    "@material/mwc-textfield": "^0.26.1",
+    "@material/mwc-top-app-bar": "^0.26.1",
+    "@material/mwc-top-app-bar-fixed": "^0.26.1",
     "event-target": "^1.2.3",
-    "lit": "2.1.1"
+    "lit": "2.2.8"
   }
 }
